DOCS: scroll collors changed and spacing in product detail fixed

--- a/src/components/cartMiniModule/miniCartMain.css
+++ b/src/components/cartMiniModule/miniCartMain.css
@@ -29,7 +29,7 @@
     border-radius: 0.25rem;
 }
 .miniCartWrapper::-webkit-scrollbar-track {
-    background: #999;
+    background: #ffffff; /* #999; */
 }
 
 
