--- a/src/pages/productDetail/productDetail.css
+++ b/src/pages/productDetail/productDetail.css
@@ -19,7 +19,7 @@
     height: 37.1875rem;
 
     position: absolute;
-    left: 13.6875;
+    left: 15.2083%; /*13.6875rem;*/
     top: 5rem;
 }
 .productDetailContainer .second .imageMain {
@@ -32,6 +32,8 @@
     right: 0%;
     top: 0%;
     bottom: 0%;
+
+    box-shadow: 0px 0px 15px #e7eff3;
 }
 .productDetailContainer .second .grouped {
     width: 18.25rem;
